--- a/src/pages/form.scss
+++ b/src/pages/form.scss
@@ -1,9 +1,9 @@
 .loginForm-container {
 	position: fixed;
 	top: 0;
+	bottom: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	right:0;
 	background-color: rgba(0, 0, 0, 0.7);
 	display: none;
 	align-items: center;
@@ -20,7 +20,7 @@
 		}
 		input {
 			font-size: 13.5px;
-			letter-spacing: 0.068rem;
+			letter-spacing: 0.06rem;
 			width: 90%;
 			padding: 0.7rem;
 			border-radius: 5px;
