--- a/src/pages/form.scss
+++ b/src/pages/form.scss
@@ -4,7 +4,8 @@
 	bottom: 0;
 	left: 0;
 	right:0;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(255, 255, 255, 0.7);
+	backdrop-filter: blur(2px);
 	display: none;
 	align-items: center;
 	justify-content: center;
