--- a/src/components/SearchModal/SearchModal.scss
+++ b/src/components/SearchModal/SearchModal.scss
@@ -1,14 +1,21 @@
-.modal {
-  backdrop-filter: blur(2px);
+.search-modal {
+  margin-inline: 0;
 }
-
 .modal-form {
   background-color: #282a2b;
   color: #edd700;
 }
 
+
 .modal-backdrop.show {
-  opacity: 0.75;
+  --bs-backdrop-bg: rgba(255, 255, 255, 0.7);
+  --bs-backdrop-opacity: 1;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  backdrop-filter: blur(2px);
 }
 .modal-search-btn {
   display: block;
